css/projects.css
html, body, .container {
  height: 100%;
  margin: 0;
}

body {
  font-family: Garamond;
  font-size: 14px;
  line-height: 1.5;
  background-color: #17202A;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
}

/* global */
.container {
  padding: 5px;
  overflow-y: auto;
  background: url('../img/wb-vol-tall.jpg') no-repeat;
  background-size: contain;
  background-position: center;
}

ul {
  margin: 0;
  padding: 0;
}

/* Header */
header {
  position: fixed;
  background: #17202A;
  color: #CACFD2;
  min-height: 40px;
  width: 100%;
}

header a {
  color: #CACFD2;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 15px;
}

header li {
  float: left;
  display: inline;
  padding: 0 20px 0 20px;
}

header #brand .img-responsive {
  float: left;
  padding-left: 25px;
  padding-top: 15px;
  min-width: 30px;
  min-height: auto;
  max-height: 4%;
  max-width: 4%;
}


header nav {
  float: right;
  margin-right: 4px;
  margin-bottom: 10px;
  padding: 10px;
}

header .highlight, header .current a {
  color: #D7BDE2;
  font-style: oblique;
}

header a:hover {
  color: #D7BDE2;
  font-weight: bold;
  font-style: oblique;
}

/* start project page */

#grid {
  color: #CACFD2;
  font-size: 20px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 15px;
  padding-top: 120px;
}

#grid .card {
  background-color: rgba(129, 123, 95, .3);
  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.4);
  border-radius: .35rem;
  min-height: 380px;
}


#grid .card .card-img img{
  padding-top: 15px;
  padding-left: 10%;
  max-width: 70%;
  max-height: auto;
}

#grid .card .card-text{
}
#grid .card .card-text p {
  color: #CACFD2;
  text-align: justify;
  text-overflow: ellipsis;
  font-size: 15px;
  text-shadow: 1px 1px 2px black;
  margin: 5px;
}

/* end project page */


footer {
  display: flex;
  color: #CACFD2;
  background-color: #17202A;
  margin-top: 5px;
  justify-content: space-around;
}


footer .one ul {
  float: left;
  color: #D7BDE2;
  margin-top: 15px;
  padding:0;
}

footer .one li {
  display: inline;
  padding: 0 5px 0 5px;
  justify-content: space-between;
}

footer .one li .social-logos{
  position: relative;
  max-height: 30px;
  width: auto;
}
footer .middle .side-geom{
  padding: 0;
  max-height: 75px;
  max-width: auto;
  padding-bottom: 10px;
}
footer .two .email{
  padding-top: 5px;
  max-height: 35px;
  max-width: auto;
}

/* Media Queeries */

@media (min-width: 320px) and (max-width: 480px) {

  header a {
    font-size: 10px;
  }

  header li {
    float: left;
    display: inline;
    padding: 0 10px 0 10px;
  }

  header #brand .img-responsive {
    float: left;
    padding-left: 25px;
    padding-top: 17px;
    margin-bottom: 15px;
    min-width: 25px;
    min-height: auto;
  }

  header nav {
    float: right;
    margin-right: 6px;
    margin-bottom: 5px;
    padding: 5px;
  }
  /* global */
  .container {
    margin-top: 45px;
    padding: 5px;
  }

  footer {
    padding: 0px;
  }
  footer .middle .side-geom{
    max-height: 45px;
    max-width: auto;
    padding-bottom: 0px;
  }
  footer .two .email{
    padding-bottom: 2px;
    padding-top: 0px;
    max-height: 40px;
    max-width: auto;
  }


}

